--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm run start --prefix frontend",
+    "dev": "concurrently \"npm run server \" \" npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "mongoose-validator": "^2.1.0"
   },
   "devDependencies": {
+    "concurrently": "^5.0.2",
     "nodemon": "^2.0.2"
   }
 }
