--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -11,6 +11,7 @@
     "@babel/react"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "styled-components"
   ]
 }
