--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "webpack": "webpack --mode production"
+    "webpack": "webpack --mode production",
+    "lint:css":"stylelint './src/**/*.js'"
   },
   "keywords": [],
   "author": "",
@@ -27,8 +28,14 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^4.4.1",
+    "stylelint": "^12.0.1",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.9.0"
   },
   "proxy": "localhost:3000"
 }
