--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "webpack": "webpack --mode production",
-    "lint:css":"stylelint './src/**/*.js'"
+    "lint:css": "stylelint './src/**/*.js'"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +31,8 @@
     "babel-plugin-styled-components": "^1.10.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.1.2",
     "styled-components": "^4.4.1",
     "stylelint": "^12.0.1",
     "stylelint-config-recommended": "^3.0.0",
