--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-config": "^5.1.1",
