--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,29 +12,35 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.5",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-react": "^7.8.2",
-    "react-hot-loader": "^4.7.0",
-    "webpack": "^4.8.3",
+    "eslint-plugin-react": "^7.18.0",
+    "react-hot-loader": "^4.12.19",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.6",
+    "css-loader": "^3.4.2",
+    "date-fns": "^2.9.0",
+    "file-loader": "^5.0.2",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.7.2",
+    "react-nice-dates": "^1.0.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
-    "styled-components": "^4.4.1",
+    "style-loader": "^1.1.3",
+    "styled-components": "^5.0.0",
     "stylelint": "^12.0.1",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
